--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,11 @@
-.container {
-  margin: 0 auto;
-}
-
-.split {
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  overflow-x: hidden;
-  padding-top: 20px;
-  
+/* .split {
+  width: 100%;
 }
 
 .navbar {
-  padding-left: 20px;
-  width: 25%;
-  left: 0;
-  background-color: rgb(255, 160, 0);
+  height: 25%;
 }
 
 .content {
-  width: 75%;
-  padding-left: 40px;
-  right: 0;
-  background-color: rgb(190, 200, 200);
-}
+  height: 75%;
+} */
